--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
-# Prerequisites
-*.d
+# Configurações do Visual Studio Code
+.vscode/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
+# Arquivos executáveis C++
 *.out
-*.app
+
+# Arquivos de entrada de dados
+.arquivos_entrada/
